--- a/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/habitacion_basica.html
+++ b/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/habitacion_basica.html
@@ -1,21 +1,7 @@
+{% extends "inmobiliariaVR/base_habitaciones.html" %}
 {% load staticfiles %}
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-    <meta name="description" content="360&deg; Image Gallery - A-Frame">
-    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="https://npmcdn.com/aframe-animation-component@3.0.1"></script>
-    <script src="https://npmcdn.com/aframe-event-set-component@3.0.1"></script>
-    <script src="https://npmcdn.com/aframe-layout-component@3.0.1"></script>
-    <script src="https://npmcdn.com/aframe-template-component@3.1.1"></script>
-    <script src="{% static 'js/jquery.js' %}"></script>
-    <script src="{% static 'js/materialize.js' %}"></script>
-    <script src="{% static 'js/set-image.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
-  </head>
+{% block content %}
   <body>
     <a-scene >
 
@@ -31,7 +17,7 @@
           event-set__1="_event: mouseenter; color: springgreen"
           event-set__2="_event: mouseleave; color: black"
           fuse="true">
-          <!--raycaster="objects: .link"--></a-cursor>
+          raycaster="objects: .link"</a-cursor>
           <a-entity rk position="0 0 -1" rotation="0 0 0"></a-entity>
       </a-entity>
 
@@ -39,3 +25,5 @@
     <input id="coordenadas" type="hidden" name="coordenadas">
   </body>
 </html>
+
+{% endblock %}
