Modifico seccion cabecera

--- a/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/base.html
+++ b/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/base.html
@@ -22,12 +22,12 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="{% url 'index'%}">Home</a></li>
-        <li><a href="{% url 'testing'%}">Creacion Habitaciones</a></li>
+        <li><a href="{% url 'creacion_habitaciones'%}">Edicion de Habitaciones</a></li>
         <li><a href="{% url 'previa'%}">Previa Habitaciones</a></li>
       </ul>
        <ul class="side-nav" id="mobile-demo">
         <li><a href="{% url 'index'%}">Home</a></li>
-        <li><a href="{% url 'testing'%}">Creacion Habitaciones</a></li>
+        <li><a href="{% url 'creacion_habitaciones'%}">Edicion de Habitaciones</a></li>
         <li><a href="{% url 'previa'%}">Previa Habitaciones</a></li>
       </ul>
     </div>
