Modifico enlace cabecera

--- a/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/base.html
+++ b/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/base.html
@@ -23,12 +23,12 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="{% url 'index'%}">Home</a></li>
         <li><a href="{% url 'creacion_habitaciones'%}">Edicion de Habitaciones</a></li>
-        <li><a href="{% url 'previa'%}">Previa Habitaciones</a></li>
+        <li><a href="{% url 'zip'%}">Generar ZIP</a></li>
       </ul>
        <ul class="side-nav" id="mobile-demo">
         <li><a href="{% url 'index'%}">Home</a></li>
         <li><a href="{% url 'creacion_habitaciones'%}">Edicion de Habitaciones</a></li>
-        <li><a href="{% url 'previa'%}">Previa Habitaciones</a></li>
+        <li><a href="{% url 'zip'%}">Generar ZIP</a></li>
       </ul>
     </div>
   </nav>
