--- a/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/main_page.html
+++ b/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/main_page.html
@@ -39,7 +39,7 @@
           <input placeholder="Nombre de la casa" id="nombre_casa" name="nombre_casa" type="text" class="validate" required>
         </div>
         <div class="input-field col s3">
-          <input placeholder="Numero de habitaciones" id="numero_habitaciones" name="numero_habitaciones" type="number" min="1" class="validate" required>
+          <input placeholder="Numero de estancias" id="numero_habitaciones" name="numero_habitaciones" type="number" min="1" class="validate" required>
         </div>
       </div>
       <div class="row input-field col s4">
