Arreglo width iFrame

--- a/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/edicion_habitaciones.html
+++ b/inmobiliariaVR/inmobiliariaVR/templates/inmobiliariaVR/edicion_habitaciones.html
@@ -50,9 +50,10 @@
   <div class="row"></div>
   <div style="visibility:hidden;" id="div_iframe" class="row">
     <div class="col s6">
-      <iframe id="iframe_test" width="1000" height="500"></iframe>
+      <iframe id="iframe_test" style="width: 100%; height: 300px;"></iframe>
     </div>
-      <table class="col s5 offset-s1">
+    <div class="col s5">
+      <table>
         <thead>
           <tr>
               <th>Nombre del boton</th>
@@ -64,6 +65,7 @@
         <tbody id="tabla_botones">
         </tbody>
       </table>
+    </div>
   </div>
     <div style="visibility:hidden;" id="div_coordenadas" class="row">
       <form id="form_coordenadas" name="form_coordenadas" class="col s12">
